change  collage name

--- a/Dhaneswar.html
+++ b/Dhaneswar.html
@@ -39,7 +39,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://www.vidyavision.com/CollegeUploads/Photos/2021-09-11-12-30-53_dekanal.jpg');
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('collageBg.png');
             background-size: cover;
             background-position: center;
             filter: blur(3px);
@@ -1126,4 +1126,5 @@
         }
     </script>
 </body>
+
 </html>
